# ai_document_assistant_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TECHNICAL.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_empty_migration.py  0002_add_project_archived_flag.py  0003_document_metadata_foundation.py  0004_add_document_upload_storage_fields.py  0005_add_document_processing_fields.py  0006_add_document_chunking_foundation.py  0007_embeddings_foundation.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/chunking/: base.py  fixed_size_chunker.py  models.py
app/core/: config.py  security.py
app/db/: base.py
app/embeddings/: base.py  models.py  registry.py
app/embeddings/providers/: local.py  mock.py  (+1 more)
app/llm/: base.py  models.py  registry.py
app/models/: __init__.py  chat.py  document.py  document_chunk.py  project.py  user.py
app/parsers/: base.py  markdown_parser.py  registry.py  txt_parser.py
app/providers/: __init__.py
app/rag/: citations.py  context_builder.py  models.py  prompt_builder.py  retriever.py
app/repositories/: document_repository.py  project_repository.py  user_repository.py
app/schemas/: auth.py  document.py  project.py  rag.py
app/services/: auth_service.py  document_embedding_service.py  document_processing_service.py  document_service.py  project_service.py  rag_answer_service.py
app/storage/: base.py  local_storage.py
tests/unit/: test_auth.py  test_documents.py  test_health.py  test_models_metadata.py  test_projects.py
(+7 files in other folders)
